--- a/algamoney-api/pom.xml
+++ b/algamoney-api/pom.xml
@@ -61,10 +61,10 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-jpamodelgen</artifactId>
-		</dependency>
+		</dependency> -->
 
 
 		<dependency>
